# keyring-smart-contracts-solana

./: Anchor.toml  Cargo.toml  README.md  SECURITY.md  package.json  run-tests.sh
.github/workflows/: program-upgrade.yml
docs/: README.md
migrations/: deploy.ts
programs/keyring-network/: Cargo.toml
programs/keyring-network/src/: blacklist_entity.rs  check_credentials.rs  collect_fees.rs  create_credential.rs  init.rs  lib.rs  manage_role.rs  register_key.rs  revoke_key.rs  set_admin.rs  unblacklist_entity.rs
programs/keyring-network/src/common/: error.rs  types.rs  verify_auth_message.rs
programs/smart-contract-solana/: Cargo.toml
programs/smart-contract-solana/src/: blacklist_entity.rs  create_credential.rs  init.rs  lib.rs  register_key.rs  unblacklist_entity.rs
programs/smart-contract-solana/src/common/: error.rs  mod.rs  types.rs  verify_auth_message.rs
scripts/: initialize.ts  manageBlacklist.ts  manageRole.ts  registerKey.ts  rotateKey.ts  setAdmin.ts
scripts/utils/: constants.ts  getPda.ts  setup.ts  types.d.ts
tests/: Cargo.toml
tests/src/: common.rs  lib.rs  test_blacklist_entity.rs  test_check_credential.rs  test_collect_fees.rs  test_create_credentials.rs  test_initialize.rs  test_manage_roles.rs  test_register_key.rs  test_revoke_key.rs  test_set_admin.rs  test_unblacklist_entity.rs  test_verify_auth_message.rs
tests/vectors/: secp256k1_vector.json
