[workspace]
members = [
    "programs/*",
    "tests"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1


[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[provider]
cluster = "mainnet"  # or "https://api.mainnet-beta.solana.com"
wallet = "/Users/amc/Documents/code/gitLibs/keyring/smart-contracts-solana/deploy-keypair.json"