[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = { version = "0.29.0"}
keyring-network = { version = "0.1.0", path = "../programs/keyring-network" }
bincode = "1.3.3"
libsecp256k1 = "0.6.0"
rand = "0.7.3"
serde_json = "1.0.138"
serde = "1.0.217"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4.1"